Fixed some minor styling issues with jumping header elements

--- a/stylesheets/blueprint.css
+++ b/stylesheets/blueprint.css
@@ -14,7 +14,8 @@
 /* custom */
 
 .nolist {list-style:none;margin:0;padding:0;}
-.float-right {float:right;}
+.float-right {float:right !important;}
+.float-left {float:left !important;}
 .align-top {vertical-align:top;}
 
 /* reset.css */
